--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Sirekap yang tidak bermasalah</title>
 </head>
 <body>
-    
+    <section>
+        <ul>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, repudiandae.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, necessitatibus amet? At animi eligendi inventore minima. Distinctio tenetur sequi quod.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+        </ul>
+    </section>
 </body>
 </html>
