adding a new branch

--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
             <p>Lorem ipsum dolor sit amet.</p>
         </ul>
     </section>
+
+    <p>this is a paragraph for ido's branch</p>
 </body>
 </html>
