--- a/indeks.html
+++ b/indeks.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <p>Latihan github pertama</p>
+        <p>jumlah suara partai A di jawa barat</p>
     </div>
 </body>
 </html>
